fixed layering of elemens - pic is visible

--- a/blog/styles/main.css
+++ b/blog/styles/main.css
@@ -27,7 +27,6 @@ body {
 .img-responsive {
   max-width: 100%;
   position:relative;
-
   z-index: 4;
 }
 
@@ -36,7 +35,7 @@ body {
   width: 100%;
   padding-top: .95rem;
   padding-left: 5%;
-  z-index: 2;
+  z-index: 5;
 
 }
 
@@ -132,7 +131,7 @@ body {
     position: fixed;
     top: 0;
     width: 33%;
-    z-index: 2;
+    z-index: -1;
   }
   .footer {
     background: none;
@@ -148,7 +147,7 @@ body {
     top: 0;
     position: fixed;
     width: 20%;
-    z-index: 1;
+    z-index: -2;
 
   }
   .top-extra {
@@ -159,7 +158,7 @@ body {
     height: 70px;
     position: fixed;
     width: 100%;
-    z-index: 0;
+    z-index: -3;
   }
 
     .bottom-extra {
@@ -170,7 +169,7 @@ body {
       height: 105px;
       position: fixed;
       width: 100%;
-      z-index: 0;
+      z-index: -3;
   }
   .navbar{
     position: fixed;
